# binpy

./: pyproject.toml  tests_requirements.yml
.github/workflows/: test.yml
binpy/: __init__.py  fold.py  utils.py
rebinpy/: fold.py  integrator.py  rebin.py  refine.py  xarray.py
tests/: test_fold.py  test_integrators.py  test_rebin.py  test_refine.py
